Fix headings after images spacing

--- a/assets/css/gutenberg/_core-headings.scss
+++ b/assets/css/gutenberg/_core-headings.scss
@@ -15,3 +15,7 @@ h3.wp-block-heading {
         margin-top: 0;
     }
 }
+
+.gb-block-image + .wp-block-heading {
+    margin-top: 15px;
+}
